--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
 </head>
 
 <body>
-  <img id="userPhoto" src="https://i.imgur.com/t8ZX9um.jpg" alt="User Photo">
+  <img id="userPhoto" src="https://instagram.fvtz1-1.fna.fbcdn.net/v/t51.2885-19/s150x150/21227454_135415933744463_1452054749728735232_a.jpg?_nc_ht=instagram.fvtz1-1.fna.fbcdn.net&_nc_ohc=Jtw44Za8yasAX8pEtyw&tp=1&oh=afaf00a9801b29a3790090f0de5bddd7&oe=6036D488" alt="User Photo">
 
-  <a href="https://www.instagram.com/thesimpsons" id="userName">@thesimpsons</a>
+  <a href="https://www.instagram.com/haripavany" id="userName">@haripavany</a>
   <div id="links">
-    <a class="link" href="https://pt.wikipedia.org/wiki/Homer_Simpson" target="_blank">Wikipedia</a>
-    <a class="link" href="https://foxplay.com/br/forme" target="_blank">IMDB</a>
+    <a class="link" href="https://haripavany.medium.com" target="_blank">Blog by Hari Pavan</a>
+    <a class="link" href="http://newsletter.haripavan.com" target="_blank">Subscribe to Newsletter by Hari Pavan</a>
+    <a class="link" href="https://www.eachlittlethings.site" target="_blank">Each Little Things</a>
+    <a class="link" href="https://newsletters.eachlittlethings.site" target="_blank">Each Little Things Newsletter</a>
   </div>
 </body>
-
+  <footer><center><p style="color:white;">This site is directed from haripavan.com</p></center></footer>
 </html>
