--- a/index.html
+++ b/index.html
@@ -21,5 +21,5 @@
     <a class="link" href="https://newsletters.eachlittlethings.site" target="_blank">Each Little Things Newsletter</a>
   </div>
 </body>
-  <footer><center><p style="color:white;">This site is redirected from</p></center></footer>
+  <footer><center><p style="color:white;">This site is redirected from www.haripavan.com</p></center></footer>
 </html>
