--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
   <a href="https://www.instagram.com/haripavany" id="userName">@haripavany</a>
   <div id="links">
     <a class="link" href="https://haripavany.medium.com" target="_blank">Blog by Hari Pavan</a>
-    <a class="link" href="http://newsletter.haripavan.com" target="_blank">Subscribe to Newsletter by Hari Pavan</a>
+    <a class="link" href="http://newsletter.haripavan.com" target="_blank">Subscribe to Hari Pavan's Newsletter</a>
     <a class="link" href="https://www.eachlittlethings.site" target="_blank">Each Little Things</a>
-    <a class="link" href="https://newsletters.eachlittlethings.site" target="_blank">Each Little Things Newsletter</a>
+    <a class="link" href="https://newsletters.eachlittlethings.site" target="_blank">Subscribe to Each Little Things Newsletter</a>
+    <a class="link" href="https://www.haripavan.com" target="_blank">Follow Me</a>
   </div>
 </body>
   <footer><center><p style="color:white;">This site is redirected from www.haripavan.com</p></center></footer>
